manifests/angular-service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${namespace}
  name: angular
  labels:
    app: angular
  spec:
    ports:
    - port: 4500
      name: angular
    clusterIP: None
    selector:
      app: angular
